--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "dependencies": {
     "react": "16.2.0",
     "react-native": "0.53.3",
-    "react-native-google-maps": "^1.0.0",
-    "react-native-maps": "*",
+    "react-native-maps": "^0.20.1",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.1.2",
