--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "16.2.0",
-    "react-native": "0.53.3",
+    "react-native": "^0.53.3",
+    "react-native-keyboard-aware-scroll-view": "^0.4.4",
     "react-native-maps": "^0.20.1",
+    "react-native-masked-text": "^1.6.5",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.1.2",
